--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <body>
       <main id="main">
       <div class="logo">
-  <img id="logo1" align="left" src="https://cdn11.bigcommerce.com/s-dl22izwaan/images/stencil/640w/products/1448/20048/1543_1k__79829.1625590523.jpg?c=1" height="100px" width="100px" />
-  <img id="logo2" align="right" src="https://cdn11.bigcommerce.com/s-dl22izwaan/images/stencil/640w/products/1448/20048/1543_1k__79829.1625590523.jpg?c=1" height="100px" width="100px" />
+  <img id="logo1" align="left" src="https://lh3.googleusercontent.com/pw/AP1GczP4Ul_wcIBxAdHcBm3StVcOApnuiC976EHdY03Rj5sUSvUkDMO5Xj-eYryPme80YOTev9Sz7F65XJjJc_tCUpWHLBBrdji4ChjDWZ58uadLHmZQqpw=s200-p-k" height="100px" width="100px" />
+  <img id="logo2" align="right" src="https://lh3.googleusercontent.com/pw/AP1GczP4Ul_wcIBxAdHcBm3StVcOApnuiC976EHdY03Rj5sUSvUkDMO5Xj-eYryPme80YOTev9Sz7F65XJjJc_tCUpWHLBBrdji4ChjDWZ58uadLHmZQqpw=s200-p-k" height="100px" width="100px" />
   </div>
       <h1><span class= "textbg">Donald  "Smitty" Schmidt</span></h1>
       <h2><span class= "textbg">March 28th, 1935 - October 13, 2021</span></h2>
       <div id="img-div">
-        <img class="image" id="image1" src="https://i.gyazo.com/f96f5303abc3c579764e9e37d0c0e2e1.jpg" />
+        <img class="image" id="image1" src="https://i.gyazo.com/2d6b1a1da7401c8ac72268120bc59089.jpg" />
         <div id="img-caption"><span class="textbg">Donald, or as I knew him..."Pops!". The MAN...The LEGEND!!!</span></div>
       </div>
       <div id="tribute-info"><span class="textbg">This page is dedicated in honor of the great Donald Schmidt! We all love and miss you.</span></div>
       <div class="photos2">
-      <img class="image" src="https://i.gyazo.com/2d6b1a1da7401c8ac72268120bc59089.jpg" />
+      <img class="image" src="https://i.gyazo.com/f96f5303abc3c579764e9e37d0c0e2e1.jpg" />
       <img class="image" src="https://i.gyazo.com/a0fd59772690c8744285487610c9fbd7.jpg" />
       </div>
 
@@ -47,10 +47,10 @@
       <img class="image" src="https://i.gyazo.com/102eb764220d2c211a5b8da3671a1e35.jpg" style="transform:rotate(90deg);" />
     </div>
 <div class="logo">
-  <img id="logo1" align="left" src="https://cdn11.bigcommerce.com/s-dl22izwaan/images/stencil/640w/products/1448/20048/1543_1k__79829.1625590523.jpg?c=1" height="100px" width="100px" />
-  <img id="logo2" align="right" src="https://cdn11.bigcommerce.com/s-dl22izwaan/images/stencil/640w/products/1448/20048/1543_1k__79829.1625590523.jpg?c=1" height="100px" width="100px" />
+  <img id="logo1" align="left" src="https://lh3.googleusercontent.com/pw/AP1GczP4Ul_wcIBxAdHcBm3StVcOApnuiC976EHdY03Rj5sUSvUkDMO5Xj-eYryPme80YOTev9Sz7F65XJjJc_tCUpWHLBBrdji4ChjDWZ58uadLHmZQqpw=s200-p-k" height="100px" width="100px" />
+  <img id="logo2" align="right" src="https://lh3.googleusercontent.com/pw/AP1GczP4Ul_wcIBxAdHcBm3StVcOApnuiC976EHdY03Rj5sUSvUkDMO5Xj-eYryPme80YOTev9Sz7F65XJjJc_tCUpWHLBBrdji4ChjDWZ58uadLHmZQqpw=s200-p-k" height="100px" width="100px" />
   </div>
-      <a id="tribute-link" href="Link here?" target= "_blank">Click this link to see more photos from his life!</a>
+      <p><a id="tribute-link" href="Link here?" target= "_blank">Click this link to see more photos from his life!</a></p>
           </main>
         </body>
       </html>
